--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
       <artifactId>commons-text</artifactId>
       <version>1.12.0</version>
     </dependency>
+      <dependency>
+        <groupId>com.sun.mail</groupId>
+        <artifactId>javax.mail</artifactId>
+        <version>1.6.2</version>
+      </dependency>
   </dependencies>
 
   <build>
