#29: Add JNA dependency

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,16 @@
         <artifactId>javax.mail</artifactId>
         <version>1.6.2</version>
       </dependency>
+    <dependency>
+      <groupId>net.java.dev.jna</groupId>
+      <artifactId>jna</artifactId>
+      <version>5.14.0</version>
+    </dependency>
+    <dependency>
+      <groupId>net.java.dev.jna</groupId>
+      <artifactId>jna-platform</artifactId>
+      <version>5.14.0</version>
+    </dependency>
   </dependencies>
 
   <build>
